# Grafika-komputerowa

./: README.md  main.cpp
grafika_dywan/: CMakeLists.txt  main.cpp
grafika_jajko/: CMakeLists.txt  main.cpp
grafika_jajko_swiatlo_zad4/: CMakeLists.txt  main.cpp
grafika_jajko_tekstury_zad5/: CMakeLists.txt  main.cpp
grafika_jajko_zad3/: CMakeLists.txt  main.cpp
grafika_konkurs_three.js/: package-lock.json  package.json
grafika_konkurs_three.js/src/client/: client.ts  tsconfig.json
grafika_konkurs_three.js/src/server/: server.ts
grafika_konkurs_three.js/src/typings/cannon/: index.d.ts
